# structured-outputs-streaming-example

./: pyproject.toml
src/: langchain_example.py  openai_create_example.py  openai_stream_example.py
